[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player/Sprites/jarry.png" type="Texture" id=1]
[ext_resource path="res://_Shit/icon.png" type="Texture" id=3]
[ext_resource path="res://Player/Scripts/Tank.gd" type="Script" id=4]
[ext_resource path="res://Shaders/water.tres" type="Material" id=5]
[ext_resource path="res://OldTests/Water.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 45.6996, 10 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 9.4812
height = 17.4516

[node name="Tank" type="Sprite"]
z_index = 1
texture = ExtResource( 1 )
script = ExtResource( 4 )

[node name="Watercolum" type="Polygon2D" parent="."]
visible = false
show_behind_parent = true
position = Vector2( 0, -32 )
scale = Vector2( 1, 0.1 )
color = Color( 0.168627, 0.823529, 1, 0.32549 )
polygon = PoolVector2Array( -10.6667, -64, 10.6667, -64, 10.6667, 32, -10.6667, 32 )

[node name="WaterTimer" type="Timer" parent="Watercolum"]
wait_time = 0.4
one_shot = true

[node name="Water" type="Sprite" parent="."]
show_behind_parent = true
material = ExtResource( 5 )
scale = Vector2( 0.9, 1e-05 )
texture = ExtResource( 3 )
script = ExtResource( 6 )

[node name="TankSTatic" type="StaticBody2D" parent="."]
collision_layer = 32
collision_mask = 32

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="TankSTatic"]
polygon = PoolVector2Array( -15.1346, -29.1697, -24.9273, -20.7928, -29.0567, 35.7217, -21.7417, 39.8512, -6.52172, 42.9187, 5.27671, 43.0367, 20.6147, 40.2051, 28.9916, 35.9577, 24.9801, -20.6748, 15.5414, -29.1697, 15.0694, -46.5134, 39.0202, -46.6313, 41.0897, 56.091, -42.7897, 56.9319, -41.1079, -45.4472, -15.2504, -45.6575 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TankSTatic"]
position = Vector2( -0.374588, -54.5009 )
shape = SubResource( 1 )

[node name="Exit" type="Area2D" parent="."]
position = Vector2( 0.75, -36.5 )
collision_layer = 2147483680
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Exit"]
position = Vector2( -0.54303, -0.0182495 )
rotation = 17.2788
shape = SubResource( 2 )

[node name="Contents" type="Node2D" parent="."]
z_index = -1

[node name="SolidShotTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="LiquidShotTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, -29.697 )
[connection signal="timeout" from="Watercolum/WaterTimer" to="." method="_on_WaterTimer_timeout"]
[connection signal="body_entered" from="Exit" to="." method="_on_Exit_body_entered"]
[connection signal="body_exited" from="Exit" to="." method="_on_Exit_body_exited"]
